Create login function

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript Example</title>
     <link rel="stylesheet" href="style.css" />
+    
   </head>
   <body>
     <div class="overlay"></div>
@@ -22,7 +23,7 @@
         </div>
       </div>
 
-      <button id="submit-btn">เข้าสู่ระบบ</button>
+      <button id="submit-btn" onclick='login()'>เข้าสู่ระบบ</button>
       <p id="errorMessage" class="error-message"></p>
     </div>
 
@@ -30,7 +31,6 @@
       <h2 id="popup-title">Error</h2>
       <p>กรุณา...</p>
       <button id="popup-btn">OK</button>
-    </div>
+    </div><script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
