--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     
   </head>
   <body>
-    <div class="overlay"></div>
+    <div class="overlay" id="overlay"></div>
     <div class="login-container">
-      <h2>เข้าสู่ระบบ</h2>
+      <h2 style="color: whitesmoke;">เข้าสู่ระบบ</h2>
       <div class="input-container">
         <div class="input-box">
-          <label for="username">ชื่อผู้ใช้:</label>
+          <label for="username" style="color: whitesmoke;">ชื่อผู้ใช้:</label>
           <input type="text" id="username" />
         </div>
 
         <div class="input-box">
-          <label for="password">รหัสผ่าน:</label>
+          <label for="password" style="color: whitesmoke;">รหัสผ่าน:</label>
           <input type="password" id="password" />
         </div>
       </div>
@@ -27,10 +27,10 @@
       <p id="errorMessage" class="error-message"></p>
     </div>
 
-    <div class="pop-up">
+    <div class="pop-up" id="pop-up">
       <h2 id="popup-title">Error</h2>
-      <p>กรุณา...</p>
-      <button id="popup-btn">OK</button>
+      <p id="popup-detail">กรุณา...</p>
+      <button id="popup-btn" onclick="closepopup()">OK</button>
     </div><script src="script.js"></script>
   </body>
 </html>
